logs/dag_id=users_churn_dag/run_id=manual__2025-01-13T201709.060276+0000/task_id=extract/attempt=1.log
[2025-01-13T20:17:13.229+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: users_churn_dag.extract manual__2025-01-13T20:17:09.060276+00:00 [queued]>
[2025-01-13T20:17:13.236+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: users_churn_dag.extract manual__2025-01-13T20:17:09.060276+00:00 [queued]>
[2025-01-13T20:17:13.236+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 2
[2025-01-13T20:17:13.248+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): extract> on 2025-01-13 20:17:09.060276+00:00
[2025-01-13T20:17:13.255+0000] {standard_task_runner.py:57} INFO - Started process 85 to run task
[2025-01-13T20:17:13.258+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'users_churn_dag', 'extract', 'manual__2025-01-13T20:17:09.060276+00:00', '--job-id', '125', '--raw', '--subdir', 'DAGS_FOLDER/churn.py', '--cfg-path', '/tmp/tmpoqkg2tmb']
[2025-01-13T20:17:13.259+0000] {standard_task_runner.py:85} INFO - Job 125: Subtask extract
[2025-01-13T20:17:13.339+0000] {task_command.py:416} INFO - Running <TaskInstance: users_churn_dag.extract manual__2025-01-13T20:17:09.060276+00:00 [running]> on host 14693034c220
[2025-01-13T20:17:13.432+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='users_churn_dag' AIRFLOW_CTX_TASK_ID='extract' AIRFLOW_CTX_EXECUTION_DATE='2025-01-13T20:17:09.060276+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-01-13T20:17:09.060276+00:00'
[2025-01-13T20:17:13.442+0000] {crypto.py:82} WARNING - empty cryptography key - values will not be stored encrypted.
[2025-01-13T20:17:13.443+0000] {base.py:73} INFO - Using connection ID 'source_db' for task execution.
[2025-01-13T20:17:14.013+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near ".."
LINE 2:     SELECT customer_id, ... FROM your_source_table
                                ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/churn.py", line 41, in extract
    data = pd.read_sql(query, conn)
  File "/home/airflow/.local/lib/python3.10/site-packages/pandas/io/sql.py", line 682, in read_sql
    return pandas_sql.read_query(
  File "/home/airflow/.local/lib/python3.10/site-packages/pandas/io/sql.py", line 1776, in read_query
    result = self.execute(sql, params)
  File "/home/airflow/.local/lib/python3.10/site-packages/pandas/io/sql.py", line 1599, in execute
    return self.con.exec_driver_sql(sql, *args)
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 1770, in exec_driver_sql
    return self._exec_driver_sql(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 1674, in _exec_driver_sql
    ret = self._execute_context(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 1953, in _execute_context
    self._handle_dbapi_exception(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 2134, in _handle_dbapi_exception
    util.raise_(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/util/compat.py", line 211, in raise_
    raise exception
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at or near ".."
LINE 2:     SELECT customer_id, ... FROM your_source_table
                                ^

[SQL: 
    SELECT customer_id, ... FROM your_source_table
    ]
(Background on this error at: https://sqlalche.me/e/14/f405)
[2025-01-13T20:17:14.034+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=users_churn_dag, task_id=extract, execution_date=20250113T201709, start_date=20250113T201713, end_date=20250113T201714
[2025-01-13T20:17:14.047+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 125 for task extract ((psycopg2.errors.SyntaxError) syntax error at or near ".."
LINE 2:     SELECT customer_id, ... FROM your_source_table
                                ^

[SQL: 
    SELECT customer_id, ... FROM your_source_table
    ]
(Background on this error at: https://sqlalche.me/e/14/f405); 85)
[2025-01-13T20:17:14.072+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2025-01-13T20:17:14.095+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
